app/components/MainContainer.css
.wrapper {
  display: flex;
  flex-direction: row;
  align-items: stretch;
  height: 100vh;
}

.column {
  flex-direction: column;
  flex: 1;
  margin: 4px;
}

.list {
  flex-direction: column;
  flex: 2;
  margin: 4px;
  overflow: hidden;
}

.scroller {
  height: 100%;
  width: 100%;
  overflow: auto;
  padding: 3px;
}

.details {
  flex-direction: column;
  flex: 3;
}

